<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_for_action_item"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_action_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_for_action_item" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_for_tabs"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_for_tabs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_for_action_bar_top"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_action_bar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_for_action_bar_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_for_action_mode_top"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_action_mode_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_for_action_mode_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_for_customtab_on_top"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_customtab_on_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_for_customtab_on_top" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_for_has_smartbar"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_has_smartbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btn_for_has_smartbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_action_bar_style"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_action_bar_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/action_bar_style" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readme_custom_back_btn"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

        <Button
            android:id="@+id/btn_custom_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/custom_back_btn" />
    </LinearLayout>

</ScrollView>